RESOLVED FIXED153108
WK1 and WK2 should share more candidate request code
https://bugs.webkit.org/show_bug.cgi?id=153108
Summary WK1 and WK2 should share more candidate request code
Beth Dakin
Reported 2016-01-14 15:17:23 PST
WK1 and WK2 should share more candidate request code. After https://bugs.webkit.org/show_bug.cgi?id=153040 some things that both need were pushed into WebCore, and WK1 should use those.
Attachments
Patch (12.49 KB, patch)
2016-01-14 15:22 PST, Beth Dakin
simon.fraser: review+
Beth Dakin
Comment 1 2016-01-14 15:22:28 PST
WebKit Commit Bot
Comment 2 2016-01-14 15:23:04 PST
Attachment 269014 [details] did not pass style-queue: ERROR: Source/WebKit/mac/WebCoreSupport/WebEditorClient.mm:1172: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3 2016-01-14 15:31:51 PST
Comment on attachment 269014 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=269014&action=review > Source/WebKit/mac/WebCoreSupport/WebEditorClient.mm:371 > +#if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101200 Can we turn the __MAC_OS_X_VERSION_MIN_REQUIRED >= 101200 into some kind of feature #ifdef? > Source/WebKit/mac/WebCoreSupport/WebEditorClient.mm:1187 > + // FIXME: Right now we only request candidates for spelling, replacement, and correction, but we plan to > + // support more types, and we will have to update this at that time. I don't think this comment is useful.
Beth Dakin
Comment 4 2016-01-14 16:08:23 PST
Note You need to log in before you can comment on or make changes to this bug.