Source/WebCore/editing/Editor.cpp
@@ -3264,11 +3264,6 @@ void Editor::respondToChangedSelection(const VisibleSelection&, FrameSelection::
     if (client())
         client()->respondToChangedSelection(&m_frame);
 
-#if PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101200
-    if (client() && canEdit())
-        client()->requestCandidatesForSelection(m_frame.selection().selection());
-#endif
-
 #if ENABLE(TELEPHONE_NUMBER_DETECTION) && !PLATFORM(IOS)
     if (shouldDetectTelephoneNumbers())
         m_telephoneNumberDetectionUpdateTimer.startOneShot(0);
